# CARMA

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README  README.md  make-carma.csh  run-all.csh  run-carma.csh  run-regress.csh  view-bench.csh
.github/workflows/: Ubuntu.yml
cmake/: carmaConfig.cmake.in  dependencies.cmake  test_util.cmake
doc/: ChangeLog  ChangeLog_template  index.html
doc/f90doc/: Makefile  actdropl.html  adgaquad_mod.html  adgaquad_types_mod.html  atmosphere_mod.html  bhmie.html  binary_nuc_vehk2002.html  binary_nuc_zhao1995.html  calcrs.html  carma_bc2gtest.html  carma_bcoctest.html  carma_coagtest.html  carma_constants_mod.html  carma_drydeptest.html  carma_enums_mod.html  carma_falltest.html  carma_fractalmicrotest.html  carma_fractalopticstest.html  carma_growintest.html  carma_growsubtest.html  carma_growtest.html  carma_inittest.html  carma_kappawetrtest.html  carma_mietest.html  carma_mod.html  carma_nuctest.html  carma_pheattest.html  carma_scfalltest.html  carma_sigmadrydeptest.html  carma_sigmafalltest.html  carma_sulfatetest.html  carma_sulfhettest.html  carma_swelltest.html  carma_test.html  carma_types_mod.html  carma_vdiftest.html  carmaelement_mod.html  carmagas_mod.html  carmagroup_mod.html  carmasolute_mod.html  (+97 more)
docker/: Dockerfile  Dockerfile.memcheck
packaging/: CMakeLists.txt
run/carma/: carma_bcoctest.txt  carma_growtest.txt  carma_kappawetrtest.txt  carma_nuctest.txt  carma_scfalltest.txt  carma_vdry.txt
source/: CMakeLists.txt  Makefile  version.F90.in
source/base/: Makefile  adgaquad_mod.F90  bhmie.F90  calcrs.F90  carma_enums_mod.F90  carma_globaer.h  carma_mod.F90  carma_types_mod.F90  carmaelement_mod.F90  carmagas_mod.F90  carmagroup_mod.F90  carmasolute_mod.F90  carmastate_mod.F90  coagl.F90  coagp.F90  downgxfer.F90  fractal_meanfield_mod.F90  freezaerl_koop2000.F90  freezaerl_mohler2010.F90  freezaerl_tabazadeh2000.F90  freezglaerl_murray2010.F90  gasexchange.F90  growevapl.F90  gsolve.F90  lusolvec_mod.F90  microfast.F90  microslow.F90  mie.F90  miess.F90  newstate.F90  newstate_calc.F90  nsubsteps.F90  pheat.F90  planck.F90  prestep.F90  psolve.F90  rhoice_heymsfield2010.F90  rhopart.F90  setupatm.F90  setupbdif.F90  (+25 more)
tests/: CMakeLists.txt  Makefile  atmosphere_mod.F90  carma_aluminum_2nc_test.F90  carma_aluminumtest_2nc.F90  carma_bc2gtest.F90  carma_bcoctest.F90  carma_cetest.F90  carma_coagtest.F90  carma_drydeptest.F90  carma_falltest.F90  carma_fractalmicrotest.F90  carma_fractaloptics_2nc_test.F90  carma_fractalopticstest.F90  carma_fractalopticstest_2nc.F90  carma_growclrtest.F90  carma_growintest.F90  carma_growsubtest.F90  carma_growtest.F90  carma_history.F90  carma_inittest.F90  carma_kappawetrtest.F90  carma_mietest.F90  carma_nuc2test.F90  carma_nuctest.F90  carma_pheattest.F90  carma_scfalltest.F90  carma_sigmadrydeptest.F90  carma_sigmafalltest.F90  carma_sulfate_2nc_test.F90  carma_sulfate_ccdon.F90  carma_sulfate_ccdon_test.F90  carma_sulfate_vehkamaki_test.F90  carma_sulfatetest.F90  carma_sulfatetest_2nc.F90  carma_sulfhet_vehkamaki_test.F90  carma_sulfhettest.F90  carma_swelltest.F90  carma_test.F90  carma_testutils.F90  (+29 more)
tests/bench/: carma_bc2gtest.txt  carma_bcoctest.txt  carma_cetest.txt  carma_coagtest.txt  carma_falltest.txt  carma_fractalopticstest.txt  carma_growclrtest.txt  carma_growintest.txt  carma_growsubtest.txt  carma_growtest.txt  carma_kappawetrtest.txt  carma_mietest.txt  carma_nuc2test.txt  carma_nuctest.txt  carma_pheattest.txt  carma_scfalltest.txt  carma_sigmadrydeptest.txt  carma_sigmafalltest.txt  carma_sigmavdry.txt  carma_sulfate_ccdon_test.txt  carma_sulfate_vehkamaki_test.txt  carma_sulfatetest.txt  carma_sulfhet_vehkamaki_test.txt  carma_sulfhettest.txt  carma_vdiftest.txt  carma_vdry.txt
tests/python/: plots_optics.ipynb  plots_timeseries.ipynb
tests/python/.ipynb_checkpoints/: plots_optics-checkpoint.ipynb  plots_timeseries-checkpoint.ipynb
